# Install the 'scx-systemd-restart' file to the '/usr/share/libalpm/scripts' directory
install_data('scx-systemd-restart', install_dir: '/usr/share/libalpm/scripts')
# Install the '90-scx-scheds-upgrade.hook' file to the '/usr/share/libalpm/hooks' directory
install_data('90-scx-scheds-upgrade.hook', install_dir: '/usr/share/libalpm/hooks')
