[package]
name = "scx_bpf_compat"
version = "1.0.20"
edition = "2021"
description = "BPF compatibility testing utilities for sched_ext"
license = "GPL-2.0-only"
authors = ["Jake Hillion <jake@hillion.co.uk>"]
repository = "https://github.com/sched-ext/scx"
homepage = "https://github.com/sched-ext/scx"

[package.metadata.scx]
ci.use_clippy = true

[dependencies]
scx_utils = { path = "../scx_utils", version = "1.0.26" }

anyhow = "1.0.65"
libbpf-rs = "=0.26.0-beta.1"
log = "0.4.17"
once_cell = "1.20.2"

[build-dependencies]
scx_cargo = { path = "../scx_cargo", version = "1.0.27" }
