[package]
name = "scx_cargo"
version = "1.1.0"
edition = "2021"
authors = ["Tejun Heo <tj@kernel.org>"]
license = "GPL-2.0-only"
repository = "https://github.com/sched-ext/scx"
description = "Build time utilities for sched_ext schedulers"

[dependencies]
anyhow = "1"
lazy_static = "1"
sscanf = "0.4"
version-compare = "0.1"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
libbpf-cargo = "=0.26.1"
tar = "0.4"
libbpf-rs = "=0.26.1"
bindgen = ">=0.69"

[build-dependencies]
ruzstd = "0.8"
tar = "0.4"
walkdir = "2"
tempfile = "3"

[dev-dependencies]
regex = "1"
tempfile = "3"
