[package]
name = "scx_cargo"
version = "1.1.0"
edition = "2021"
authors = ["Tejun Heo <tj@kernel.org>"]
license = "GPL-2.0-only"
repository = "https://github.com/sched-ext/scx"
description = "Build time utilities for sched_ext schedulers"

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
sscanf.workspace = true
version-compare.workspace = true
glob.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
libbpf-cargo.workspace = true
tar = "0.4"
libbpf-rs.workspace = true
bindgen = ">=0.69"

[build-dependencies]
ruzstd.workspace = true
tar = "0.4"
walkdir.workspace = true
tempfile.workspace = true

[dev-dependencies]
regex.workspace = true
tempfile.workspace = true
