[package]
name = "scx-ebpf"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "Shared eBPF-side support for pure-Rust sched_ext schedulers"

[features]
# Enable kfuncs that only exist on kernel >= 6.16.
kernel_6_16 = []

[dependencies]
scx-ebpf-derive = { path = "../scx_ebpf_derive" }
