[package]
name = "scx_events"
version = "0.0.0"
edition = "2024"
authors = ["Darin Morrison <darinmorrison@gmail.com>"]
license = "GPL-2.0-only"
repository = "https://github.com/sched-ext/scx"
description = "io_uring-based event handling for sched_ext schedulers"

[features]
bench = []
nightly = []

[[bench]]
name = "bench"
harness = false
required-features = ["bench"]

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
bumpalo = { version = "3.14.0", default-features = false, features = ["std"] }
chute = { version = "0.2.1", default-features = false }
fixedbitset = { version = "0.5.7", default-features = false }
linux-raw-sys = { version = "0.10.0", default-features = false, features = [
    "errno",
    "general",
    "io_uring",
    "std",
] }
log = { version = "0.4.27", default-features = false }
memchr = "2.7.5"
neli = { version = "0.7.0", default-features = false, features = ["sync"] }
pin-project-lite = { version = "0.2.16", default-features = false }
rapidhash = { version = "1.4.0", default-features = false, features = ["std"] }
rustix = { version = "1.0.8", default-features = false, features = [
    "event",
    "io_uring",
    "std",
] }
rustix-uring = { version = "0.6.0", default-features = false }
static_assertions_next = { version = "1.1.2", default-features = false }
triomphe = { version = "0.1.14", features = ["arc-swap"] }
winnow = { version = "0.7.12", default-features = false, features = ["std"] }
zerocopy = { version = "0.8.26", default-features = false, features = [
    "derive",
] }

[dev-dependencies]
criterion = "0.6.0"
env_logger = "0.11.8"
rand = "0.9.1"
