[package]
name = "scx_lib_selftests"
version = "1.0.1"
edition = "2021"

publish = false

[dependencies]
anyhow = "1.0.65"
libbpf-rs = "=0.26.0-beta.0"
simplelog = "0.12"
scx_utils = { path = "../scx_utils", version = "1.0.17" }

[build-dependencies]
scx_utils = { path = "../scx_utils", version = "1.0.17" }
