[package]
name = "scx_lib_selftests"
version = "1.0.3"
edition = "2021"

publish = false

[dependencies]
anyhow = "1.0.65"
libbpf-rs = "=0.26.0-beta.1"
simplelog = "0.12"
scx_utils = { path = "../scx_utils", version = "1.0.21" }

[build-dependencies]
scx_cargo = { path = "../scx_cargo", version = "1.0.21" }
