[package]
name = "scx_loader"
version = "1.0.6"
authors = ["Vladislav Nepogodin <vnepogodin@cachyos.org>"]
edition = "2021"
description = "DBUS on-demand loader of sched-ext schedulers"
license = "GPL-2.0-only"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
ctrlc = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["process", "signal"] }
serde = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread", "process"] }
toml = { workspace = true }
zbus = { workspace = true, features = ["tokio"] }
