[package]
name = "scx_loader"
version = "1.0.11"
authors = ["Vladislav Nepogodin <vnepogodin@cachyos.org>"]
edition = "2021"
description = "DBUS on-demand loader of sched-ext schedulers"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.5.28", features = ["derive", "env", "unicode", "wrap_help"] }
colored = "3.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
log = "0.4.17"
nix = { features = ["process", "signal"], default-features = false, version = "0.29" }
serde = { version = "1.0.215", features = ["derive"] }
sysinfo = "0.33.1"
tokio = { version = "1.42.0", features = ["macros", "sync", "rt-multi-thread", "process"] }
tokio-util = "0.7.13"
toml = "0.8.19"
zbus = { version = "5.3.1", features = ["tokio"], default-features = false }
zvariant = "5.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "scx_loader"
path = "src/main.rs"

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
