[package]
name = "scx_metrics"
version = "1.1.2"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/sched-ext/scx"
description = "Low-overhead sched_ext metric aggregation"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libbpf-rs = "=0.26.2"

[build-dependencies]
scx_cargo = { path = "../scx_cargo", version = "1.1.2" }
