[package]
name = "scx_raw_pmu"
version = "0.1.4"
edition = "2021"
description = "Utilities to handle raw PMU counters in sched_ext schedulers"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0.102"
csv = "1.4.0"
include_dir = "0.7.4"
procfs = "0.18.0"
regex = "1.12.3"
scx_utils = { path = "../scx_utils", version = "1.0.26" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.26.0"

[build-dependencies]
scx_utils = { path = "../scx_utils", version = "1.0.26" }
