[package]
name = "scx_raw_pmu"
version = "1.1.0"
edition = "2021"
description = "Utilities to handle raw PMU counters in sched_ext schedulers"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1"
csv = "1"
include_dir = "0.7"
procfs = "0.18"
regex = "1"
scx_utils = { path = "../scx_utils", version = "1.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
scx_utils = { path = "../scx_utils", version = "1.1.0" }
