[package]
name = "scx_raw_pmu"
version = "1.1.0"
edition = "2021"
description = "Utilities to handle raw PMU counters in sched_ext schedulers"
license = "GPL-2.0-only"

[dependencies]
anyhow.workspace = true
csv = "1"
include_dir = "0.7"
procfs = "0.18"
regex.workspace = true
scx_utils = { path = "../scx_utils", version = "1.1.0" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
scx_utils = { path = "../scx_utils", version = "1.1.0" }
