[package]
name = "scx_rustland_core"
version = "2.4.11"
edition = "2021"
authors = ["Andrea Righi <andrea.righi@linux.dev>"]
license = "GPL-2.0-only"
repository = "https://github.com/sched-ext/scx"
description = "Framework to implement sched_ext schedulers running in user space"

include = [
    "assets/bpf/intf.h",
    "assets/bpf/main.bpf.c",
    "assets/bpf.rs",
]
[dependencies]
anyhow = "1"
plain = "0.2"
libbpf-rs = "=0.26.1"
libc = "0.2"
seccomp = "0.1"
scx_cargo = { path = "../scx_cargo", version = "1.1.0" }

[lib]
name = "scx_rustland_core"
path = "src/lib.rs"

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
