[package]
name = "scx_simulator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
libbpf-sys = "=1.6.1"
libc = "0.2"
libloading = "0.8"
perf-event-open-sys = "5"
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[build-dependencies]
cc = "1.2.29"

[[bench]]
name = "simulator"
harness = false
