[package]
name = "scx_stats"
version = "1.0.6"
edition = "2021"
authors = ["Tejun Heo <tj@kernel.org>"]
license = "GPL-2.0-only"
repository = "https://github.com/sched-ext/scx"
description = "Statistics transport library for sched_ext schedulers"

[dependencies]
anyhow = { workspace = true }
crossbeam = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
scx_stats_derive = { workspace = true }
simple_logger = { workspace = true }
