[package]
name = "scx_stats"
version = "1.1.0"
edition = "2021"
authors = ["Tejun Heo <tj@kernel.org>"]
license = "GPL-2.0-only"
repository = "https://github.com/sched-ext/scx"
description = "Statistics transport library for sched_ext schedulers"

[dependencies]
anyhow.workspace = true
crossbeam.workspace = true
libc.workspace = true
log.workspace = true
proc-macro2 = "1"
quote = "1"
serde.workspace = true
serde_json.workspace = true
syn = { version = "2", features = ["extra-traits", "full"] }

[dev-dependencies]
scx_stats_derive = { path = "scx_stats_derive" }
simple_logger = "5"

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
