[package]
name = "scx_userspace_arena"
version = "1.0.14"
edition = "2021"
authors = ["Jake Hillion <jake@hillion.co.uk>"]
license = "GPL-2.0-only"
repository = "https://github.com/sched-ext/scx"
description = "Utilities for interacting with BPF arenas from userspace in sched_ext schedulers"

[package.metadata.scx]
ci.use_clippy = true

[dependencies]
scx_utils = { path = "../scx_utils", version = "1.0.17" }

anyhow = "1.0.65"
buddy_system_allocator = { version = "0.11.0", default-features = false }
libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs.git", rev = "79bf5154af40517271be81ef7fdf6e30eebac41f" }

[build-dependencies]
scx_utils = { path = "../scx_utils", version = "1.0.17" }
