[package]
name = "scx_utils"
version = "1.1.0"
edition = "2021"
authors = ["Tejun Heo <tj@kernel.org>"]
license = "GPL-2.0-only"
repository = "https://github.com/sched-ext/scx"
description = "Utilities for sched_ext schedulers"

[dependencies]
anyhow.workspace = true
bitvec = { version = "1", features = ["serde"] }
bindgen = ">=0.69"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
glob.workspace = true
hex = "0.4"
lazy_static.workspace = true
libbpf-cargo.workspace = true
libbpf-rs.workspace = true
log.workspace = true
nvml-wrapper = { version = "0.12", optional = true }
nvml-wrapper-sys = { version = "0.9", optional = true }
paste = "1"
regex.workspace = true
ruzstd.workspace = true
scx_stats = { path = "../scx_stats", version = "1.1.0" }
serde.workspace = true
sscanf.workspace = true
tar = "0.4"
walkdir.workspace = true
version-compare.workspace = true
zbus = { version = "5", optional = true }
num = "0.4"
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
libc.workspace = true
nix = { version = "0.31", features = ["resource"] }

scx_cargo = { path = "../scx_cargo", version = "1.1.0", optional = true }

[build-dependencies]
anyhow.workspace = true
bindgen = ">=0.69"
glob.workspace = true
lazy_static.workspace = true
libbpf-cargo.workspace = true
ruzstd.workspace = true
scx_cargo = { path = "../scx_cargo", version = "1.1.0" }
sscanf.workspace = true
tar = "0.4"
tempfile.workspace = true
version-compare.workspace = true
walkdir.workspace = true

[features]
default = []
gpu-topology = ["dep:nvml-wrapper", "dep:nvml-wrapper-sys"]
autopower = ["dep:zbus"]
deprecated-build-support = ["dep:scx_cargo"]
testutils = []

[[example]]
name = "mangolog"
crate-type = ["bin"]

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
